syntax = "proto3";
package cosmicether.ethquery;

import "cosmicether/ethquery/ethquery.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/ajansari95/cosmicether/x/ethquery/types";

service Query {
  rpc Queries(QueryRequestsRequest) returns (QueryRequestsResponse) {
    option (google.api.http).get = "/cosmicether/ethquery/queries";
  }
}

message QueryRequestsRequest {}

message QueryRequestsResponse {
  repeated EthQuery quereis = 1 [ (gogoproto.nullable) = false ];
}
